--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "cross-env EXPO_ROUTER_APP_ROOT=src/app expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
+    "android": "cross-env EXPO_ROUTER_APP_ROOT=src/app expo run:android",
+    "ios": "cross-env EXPO_ROUTER_APP_ROOT=src/app expo run:ios",
+    "web": "cross-env EXPO_ROUTER_APP_ROOT=src/app expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
@@ -17,7 +17,11 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@rn-primitives/slot": "^1.2.0",
     "@supabase/supabase-js": "^2.57.4",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "~54.0.10",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -37,16 +41,20 @@
     "react-native": "0.81.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.17"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
