--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-mmkv": "^3.3.3",
     "react-native-pager-view": "6.9.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
