--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-mmkv": "^3.3.3",
     "react-native-pager-view": "6.9.1",
     "react-native-paper": "^5.14.5",
@@ -71,6 +72,7 @@
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-size-matters": "^0.4.2",
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-swiper-flatlist": "^3.2.5",
