--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
       "policy": "appVersion"
     },
     "orientation": "portrait",
-    "icon": "./src/assets/logo/logo-light.png",
+    "icon": "./src/assets/icons/logo-square.svg",
     "scheme": "tattoola",
     "userInterfaceStyle": "dark",
     "platforms": [
@@ -50,7 +50,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./src/assets/logo/logo-light.png"
+      "favicon": "./src/assets/icons/logo-square.svg"
     },
     "plugins": [
       "expo-router",
@@ -64,7 +64,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./src/assets/logo/logo-light.png",
+          "image": "./src/assets/icons/logo-square.svg",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#000000"
