--- a/eas.json
+++ b/eas.json
@@ -20,7 +20,7 @@
     },
     "preview": {
       "developmentClient": false,
-      "distribution": "internal",
+      "distribution": "store",
       "channel": "preview",
       "ios": {
         "resourceClass": "m-medium"
@@ -32,11 +32,24 @@
     "production": {
       "channel": "production",
       "ios": {
-        "resourceClass": "m-medium"
+        "resourceClass": "m-medium",
+        "distribution": "store"
+      },
+      "android": {
+        "buildType": "apk"
       }
     }
   },
   "submit": {
-    "production": {}
+    "preview": {
+      "ios": {
+        "ascAppId": "6755720276"
+      }
+    },
+    "production": {
+      "ios": {
+        "ascAppId": "6755720276"
+      }
+    }
   }
 }
