--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.16",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "^19.0.17",
