--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
         "ITSAppUsesNonExemptEncryption": false,
         "NSPhotoLibraryUsageDescription": "The app accesses your photos to let you share them with your friends.",
         "NSCameraUsageDescription": "The app accesses your camera to let you take photos and share them with your friends."
-      }
+      },
+      "associatedDomains": ["applinks:haehelhifvbafqmdrhfg.supabase.co"]
     },
     "android": {
       "versionCode": 4,
@@ -43,6 +44,23 @@
       "permissions": [
         "android.permission.RECORD_AUDIO",
         "android.permission.RECORD_AUDIO"
+      ],
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "tattoola"
+            },
+            {
+              "scheme": "https",
+              "host": "haehelhifvbafqmdrhfg.supabase.co",
+              "pathPrefix": "/auth/v1"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
       ]
     },
     "web": {
