--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
       "policy": "appVersion"
     },
     "orientation": "portrait",
-    "icon": "./src/assets/images/icon.png",
+    "icon": "./src/assets/app-icons/favicon.png",
     "scheme": "tattoola",
     "userInterfaceStyle": "dark",
     "platforms": ["ios", "android"],
@@ -32,9 +32,9 @@
     "android": {
       "versionCode": 4,
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
+        "backgroundColor": "#0A0101",
         "foregroundImage": "./src/assets/images/android-icon-foreground.png",
-        "backgroundImage": "./src/assets/images/android-icon-background.png",
+        "backgroundImage": "./src/assets/app-icons/icon-background.png",
         "monochromeImage": "./src/assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
@@ -66,7 +66,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./src/assets/images/icon.png"
+      "favicon": "./src/assets/app-icons/favicon.png"
     },
     "plugins": [
       "expo-router",
@@ -80,7 +80,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./src/assets/images/icon.png",
+          "image": "./src/assets/app-icons/favicon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#000000"
