added collection limits/ upload limit

--- a/app.json
+++ b/app.json
@@ -47,7 +47,10 @@
       "package": "com.haseebahmedrazakhan.tattoola",
       "permissions": [
         "android.permission.RECORD_AUDIO",
-        "android.permission.RECORD_AUDIO"
+        "android.permission.CAMERA",
+        "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.READ_MEDIA_VIDEO",
+        "android.permission.READ_EXTERNAL_STORAGE"
       ],
       "intentFilters": [
         {
